--- a/src/containers/talks/Talks.scss
+++ b/src/containers/talks/Talks.scss
@@ -1,29 +1,43 @@
-@import "../../_globalColor";
+/* Talks Page Styling */
+.main {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align everything to the left */
+}
+
+.talk-header {
+  width: 100%; /* Ensure it spans the full width of the container */
+  margin-bottom: 0px;
+}
 
 .talk-header-title {
-  font-size: 56px;
-  font-weight: 400;
-  line-height: 0px;
+  font-size: 42px;
+  font-weight: normal;
+  margin-bottom: 10px;
+  text-align: left; /* Align the title to the left */
 }
 
-.talk-cards-div {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-  gap: 1rem 1rem;
+.talk-header-subtitle {
+  font-size: 18px;
+  color: #666666;
+  text-align: left; /* Align the subtitle to the left */
 }
 
-.subTitle {
-  color: $subTitle;
+.dark-mode.talk-header-subtitle {
+  color: #bbbbbb;
 }
 
-@media (max-width: 768px) {
-  .talk-header-title {
-    font-size: 30px;
-    text-align: center;
-  }
-  .talk-header-subtitle {
-    font-size: 16px;
-    line-height: normal;
-    text-align: center;
-  }
+/* Cards Container */
+.cards-container {
+  display: flex;
+  flex-wrap: wrap; /* Allows wrapping to the next row if screen is too narrow */
+  gap: 20px; /* Space between cards */
+  justify-content: flex-start; /* Align cards to the left */
+  width: 100%;
+}
+
+/* Individual Card Styling (Inherited from TalkCard.scss) */
+.talk-card {
+  width: 380px; /* Card width */
 }
